# oop2023T

kozin_v_v/: CMakeLists.txt
kozin_v_v/prj.cw/: CMakeLists.txt  glarraybuffer.h  image.cpp  image.h  images.cpp  images.h  imgui_extension.cpp  imgui_extension.h  layer.cpp  layer.h  main.cpp  program.cpp  program.h  shader.cpp  yolo_seg.cpp  yolo_seg.h  yolov5_seg_utils.cpp  yolov5_seg_utils.h
kozin_v_v/prj.cw/doc/: Doxyfile
kozin_v_v/prj.cw/include/: IconsFontAwesome4.h  IconsMaterialDesign.h
kozin_v_v/prj.lab/: CMakeLists.txt
kozin_v_v/prj.lab/arrayd/: CMakeLists.txt
kozin_v_v/prj.lab/arrayd/include/arrayd/: arrayd.hpp
kozin_v_v/prj.lab/arrayd/src/: arrayd.cpp
kozin_v_v/prj.lab/arrayt/: CMakeLists.txt
kozin_v_v/prj.lab/arrayt/include/arrayt/: arrayt.hpp
kozin_v_v/prj.lab/matrixs/: CMakeLists.txt
kozin_v_v/prj.lab/matrixs/include/matrixs/: matrixs.hpp
kozin_v_v/prj.lab/matrixs/src/: matrixs.cpp
kozin_v_v/prj.lab/rational/: CMakeLists.txt  rational.cpp
kozin_v_v/prj.lab/rational/include/rational/: rational.hpp
kozin_v_v/prj.test/: CMakeLists.txt  test_arrayd.cpp  test_arrayt.cpp  test_matrixs.cpp  test_rational.cpp
